--- a/packages/hardhat-zksync-upgradable/package.json
+++ b/packages/hardhat-zksync-upgradable/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
     "@matterlabs/hardhat-zksync-solc": "^0.3.16",
-    "dockerode": "^3.3.4"
+    "dockerode": "^3.3.4",
+    "zksync-web3": "^0.14.3"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
@@ -42,6 +43,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.3",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
+    "@types/debug": "^4.1.7",
     "@types/node": "^18.11.17",
     "@types/proper-lockfile": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "5.13.0",
