--- a/packages/hardhat-zksync-verify/package.json
+++ b/packages/hardhat-zksync-verify/package.json
@@ -32,14 +32,16 @@
     "README.md"
   ],
   "dependencies": {
-    "axios": "^1.3.6",
     "@matterlabs/hardhat-zksync-solc": "0.3.16",
+    "axios": "^1.3.6",
     "chalk": "4.1.2",
+    "debug": "^4.3.4",
     "dockerode": "^3.3.4"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "@types/chai": "^4.2.0",
+    "@types/debug": "^4",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "5.13.0",
@@ -54,7 +56,8 @@
     "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "zksync-web3": "^0.14.3"
   },
   "peerDependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.2"
